--- a/www/css/vis_editor.css
+++ b/www/css/vis_editor.css
@@ -24,6 +24,16 @@ body{
     outline: none;
 }
 
+div#vis_container {
+    width: -webkit-calc(100% - 5px);
+    width: calc(100% - 2px);
+    height: -webkit-calc(100% - 30px);
+    height: calc(100% - 30px);
+    position: relative;
+    overflow: auto;
+    border-bottom-width: 0px;
+}
+
 ::-webkit-scrollbar {
     width: 16px;
     height: 16px;
@@ -456,9 +466,8 @@ body{
     width: 190px;
     display: inline-block;
     height: 100%;
-
-    border-right-width: 0;
-    /* border-bottom-width: 1px; */
+    /* border-right-width: 0;*/
+    border-bottom-width: 0; 
     border-top-width: 0;
     border-left-width: 0;
     /* display: inline-block; */
